@@ -62,7 +62,7 @@ namespace Pds {
           //  all levels, so wait some reasonable time.
           //
           timespec tv;
-          tv.tv_sec = 0; tv.tv_nsec = 50000000;
+          tv.tv_sec = 0; tv.tv_nsec = 200000000;
 	  nanosleep(&tv, 0);
 	}
 	else if (i->id()==TransitionId::Map) {
